<resources>
    <string name="app_name">Friendship</string>
    <string name="play_friendship_theme">Play Friendship Theme</string>
    <string name="friendship_image">Friendship Image</string>
    <string name="show_friendship_toast">Show Friendship Toast</string>
    <string name="happy_friendship_day">Happy Friendship Day!</string>
    <string name="change_picture">Change Picture</string>
</resources>