<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg1"
    tools:context=".MainActivity">

    <!-- TextView for displaying friendship message -->
    <TextView
        android:id="@+id/tvFriendshipMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/happy_friendship_day"
        android:textColor="#85143A"
        android:textSize="24sp" />

    <!-- ImageView to show a friendship image -->
    <ImageView
        android:id="@+id/imgFriendship"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/friendship_icon"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/friendship_image"/>

    <!-- Button to play friendship theme sound -->
    <Button
        android:id="@+id/btnChangePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_picture"
        android:textColor="@color/black"
        android:backgroundTint="#3478F6"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/btnPlaySound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_friendship_theme"
        android:textColor="@color/black"
        android:backgroundTint="#92E235"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"/>

    <!-- Button to show toast message -->
    <Button
        android:id="@+id/btnShowToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_friendship_toast"
        android:textColor="@color/black"
        android:backgroundTint="#E24236"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
</LinearLayout>